# basic_AWS_MQTT_OTA

./: .gitignore  CMakeLists.txt  OTA.bat  OTA.sh  README.md  build.bat  certs.bat  certs.sh  config.bat  config.sh  erase_flash.bat  erase_flash.sh  export.bat  export.sh  flash.bat  flash.py  flash.sh  install.bat  install.sh  monitor.bat  monitor.sh  partitions_ota_mqtt.csv  rebuild.bat  rebuild.sh  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.old  start_ota_stream.py  truncar_last.py
components/cJSON/: CMakeLists.txt
components/cJSON/include/: cJSON.h
components/color_print/: CMakeLists.txt
components/color_print/include/: color_print.h
components/protocol_common_conection_functions/: CMakeLists.txt  addr_from_stdin.c  connect.c  console_cmd.c  eth_connect.c  stdin_out.c  wifi_connect.c
components/protocol_common_conection_functions/include/: common_conection_functions_private.h  protocol_common_conection_functions.h
libraries/backoffAlgorithm/backoffAlgorithm/docs/doxygen/: pages.dox
libraries/coreMQTT/: CMakeLists.txt
libraries/coreMQTT/coreMQTT/source/: core_mqtt.c
libraries/corePKCS11/corePKCS11/test/cbmc/include/: core_pkcs11_config.h
libraries/ota-for-aws-iot-embedded-sdk/: CMakeLists.txt
libraries/ota-for-aws-iot-embedded-sdk/ota-for-aws-iot-embedded-sdk/source/: ota.c  ota_mqtt.c
libraries/ota-for-aws-iot-embedded-sdk/ota-for-aws-iot-embedded-sdk/source/portable/os/: ota_os_freertos.c
libraries/ota-for-aws-iot-embedded-sdk/port/: ota_os_freertos.c  ota_pal.c
main/: CMakeLists.txt  app_main.c  conn_mqtt.c  idf_component.yml  mqtt_subscription_manager.c  mqtt_subscription_manager.h
main/components/shared/: CMakeLists.txt
main/components/shared/include/: aws_clientcredential.h  aws_clientcredential_keys.h  smp_config.h  smp_global.h
main/components/shared/src/: mqttCallback.c  mqttSender.c
